--- a/LycheeLib.Island/manifest.yml
+++ b/LycheeLib.Island/manifest.yml
@@ -4,9 +4,9 @@
 
 id: ink.lipoly.ext.lychee
 name: LycheeLib
-description: 插件描述
-entranceAssembly: "LycheeLib.ClassIsland.dll"
+description: 为众多ClassIsland插件提供统一的歌词接口
+entranceAssembly: "LycheeLib.Island.dll"
 url: https://example.com
 version: 0.0.0.0
 apiVersion: 1.6.0
-author: lithium
+author: LiPolymer
